# Password_manager

./: README.md  db_manager.py  main.py  main_manager.py  main_password_widget.py  main_windows.py  name_list_widget.py  password_encryption.py  password_manager.py  pyproject.toml  settings.json  settings_manager.py  settings_widget.py
CSS/: styles.qss
Database/: db_manager.py
app/: account_list_widget.py  main_password_widget.py  main_windows.py
dialogs/: __init__.py  add_password.py  edit_password.py  password_operations.py  reset_password.py  set_password.py  view_password.py
modules/main/: __init__.py
modules/main/account/: account_list_handler.py  account_list_ui.py
modules/main/main_password/: main_password_controller.py
modules/main/main_window/: activity_event_filter.py  main_window_controller.py  tray_controller.py
modules/settings/: __init__.py
modules/settings/category/: category_add_dialog.py  category_dialog.py  category_settings.py
modules/settings/system/: system_dialog.py  system_settings.py  theme_settings.py
preferences/: auto_logout_manager.py  constants.py  settings.json  settings_manager.py  settings_widget.py
styles/: tray_styles.py
system/: close_dialog_manager.py  system_theme_detector.py  system_tray_manager.py
utils/: import_export_manager.py  password_encryption.py  password_generator.py  path_helper.py  style_loader.py  svg_icon_add.py  svg_icon_set.py
